.metadata/.plugins/org.eclipse.cdt.ui/House_test.build.log
19:34:47 **** Incremental Build of configuration Debug for project House_test ****
make all 
Building file: ../src/House.cpp
Invoking: GCC C++ Compiler
g++ -std=c++0x -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/House.d" -MT"src/House.d" -o "src/House.o" "../src/House.cpp"
In file included from ../src/House.h:17:0,
                 from ../src/House.cpp:7:
../src/Floor.h:27:13: error: ‘Room’ does not name a type
       const Room& getRoom(std::string name) const;
             ^
../src/Floor.h:30:26: error: ‘Room’ does not name a type
       void addRoom(const Room& _Room);
                          ^
../src/Floor.h:35:7: error: ‘Rooms’ does not name a type
       Rooms RoomList;
       ^
../src/House.cpp: In member function ‘void House::readHouseXml(const string&)’:
../src/House.cpp:116:44: error: no matching function for call to ‘Floor::addRoom(Room&)’
                      pFloor->addRoom(*pRoom);
                                            ^
../src/House.cpp:116:44: note: candidate is:
In file included from ../src/House.h:17:0,
                 from ../src/House.cpp:7:
../src/Floor.h:30:12: note: void Floor::addRoom(const int&)
       void addRoom(const Room& _Room);
            ^
../src/Floor.h:30:12: note:   no known conversion for argument 1 from ‘Room’ to ‘const int&’
../src/House.cpp: In member function ‘const Room& House::getRoom(std::string) const’:
../src/House.cpp:196:42: error: ‘const class Floor’ has no member named ‘getRoom’
       if(boost::algorithm::iequals(floor.getRoom(name).Name, name))
                                          ^
../src/House.cpp:198:23: error: ‘const class Floor’ has no member named ‘getRoom’
          return floor.getRoom(name);
                       ^
make: *** [src/House.o] Error 1
src/subdir.mk:24: recipe for target 'src/House.o' failed

19:34:54 Build Finished (took 6s.918ms)

